--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
+<head>
+<style type="text/css">
+#header  
+color:#ffffff;
+font-family:Muli, calibri, sans-serif;
+font-size:10px;
+</style>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<div id="header">
+this is gay :)
+</div>
 </body>
 </html>
