--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ color:#ffffff;
 font-family:Muli, calibri, sans-serif;
 font-size:10px;
 </style>
+</head>
 <body>
 <div id="header">
 this is gay :)
