--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <style type="text/css">
 #header  
 color:#ffffff;
-font-family:Muli, calibri, sans-serif;
+font:calibri;
 font-size:10px;
 </style>
+</head>
 <body>
 <div id="header">
 this is gay :)
