--- a/index.html
+++ b/index.html
@@ -1,16 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
-<style type="text/css">
-#header  
-color:#ffffff;
-font:calibri;
-font-size:10px;
-</style>
-</head>
+  <head>
+    <title>gay, probably</title>
+  </head>
 <body>
-<div id="header">
-this is gay :)
-</div>
+  <p>this is gay :)</p>
 </body>
 </html>
