--- a/index.html
+++ b/index.html
@@ -2,8 +2,17 @@
 <html>
   <head>
     <title>gay, probably</title>
+    <style type="text/css">
+      header {
+        font-family:verdana;
+        font-size:10px;
+        text-align:center;
+      }
+    </style>
   </head>
 <body>
-  <p>this is gay :)</p>
+  <div id="header">
+    this is gay :)
+    </div>
 </body>
 </html>
