--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <style type="text/css">
       header {
         font-family:verdana;
-        font-size:10px;
+        display:block;
+        font-size:20px;
         text-align:center;
+        padding:3px;
       }
     </style>
   </head>
 <body>
   <header>
-    this is gay :)
-    </header>
+    this is gay :) 
+  </header>
 </body>
 </html>
