--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>gay, probably</title>
     <style type="text/css">
       header {
-        font-family:verdana;
+        font-family:"Comic Sans MS", cursive, sans-serif;
         font-size:20px;
         text-align:center;
       }
