--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
         font-family:"Comic Sans MS", cursive, sans-serif;
         font-size:20px;
         text-align:center;
+       }
+      picture1 {
+        width: 300px;
+        padding: 25px;
+        margin-left: 25px;
       }
     </style>
   </head>
@@ -14,5 +19,8 @@
   <header>
     this is gay :) 
   </header>
+  <picture1>
+    <img src="https://66.media.tumblr.com/28f176a6bc03ab2e655ce427a8595ebb/tumblr_mu6dd2XBOD1skq3nno1_500.png">
+  </picture1>
 </body>
 </html>
