--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     this is gay :) 
   </header>
   <picture1>
-    <img src="https://66.media.tumblr.com/28f176a6bc03ab2e655ce427a8595ebb/tumblr_mu6dd2XBOD1skq3nno1_500.png">
+    <a><img src="https://66.media.tumblr.com/28f176a6bc03ab2e655ce427a8595ebb/tumblr_mu6dd2XBOD1skq3nno1_500.png"></a>
   </picture1>
 </body>
 </html>
