--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         text-align:center;
        }
       picture1 {
-        width: 300px;
+        width: 200px;
         padding: 25px;
         margin-left: 25px;
       }
@@ -20,7 +20,7 @@
     this is gay :) 
   </header>
   <picture1>
-    <a><img src="https://66.media.tumblr.com/28f176a6bc03ab2e655ce427a8595ebb/tumblr_mu6dd2XBOD1skq3nno1_500.png" width="200" height="160"></a>
+    <a><img src="https://66.media.tumblr.com/28f176a6bc03ab2e655ce427a8595ebb/tumblr_mu6dd2XBOD1skq3nno1_500.png"></a>
   </picture1>
 </body>
 </html>
