--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>no blues</title>
-    <style type="text/css">
+    <style type="css/text">
         #headerbar {
             padding-top: 10px;
             padding-bottom: 10px;
