--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <style type="text/css">
         
         #clockbox {
-            font-size:20px;
+            font-size: 20px;
+            font-family: "Lucida Console", Monaco, monospace;
+            position: absolute;
+            width: 200px;
+            
         }
     </style>
 </head>
