--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
             font-family: "Lucida Console", Monaco, monospace;
             position: absolute;
             width: 200px;
+            color; white;
+            background-color: black;
+            right: 50%;
             
         }
     </style>
