--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
             font-family: "Lucida Console", Monaco, monospace;
             position: absolute;
             width: 200px;
-            color; white;
+            color: white;
             background-color: black;
             right: 50%;
+            text-align: center;
+            padding-top: 180px;
+            padding-bottom: 180px;
             
         }
     </style>
