--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             setInterval(GetClock,1000);
         }
     </script>
-        <div id="clockbox"></div>
+        <div id="clockbox" style="color: white;"></div>
 </clock>
     
     <content>
