--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
             width: 200px;
             color: white;
             background-color: black;
-            right: 50%;
+            right: 40%;
             text-align: center;
-            padding-top: 180px;
-            padding-bottom: 180px;
+            padding-top: 100px;
+            padding-bottom: 100px;
+            margin-top: 25px;
             
         }
     </style>
