--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>no blues</title>
+    <title>H O M E</title>
     <style type="text/css">
         
         #clockbox {
@@ -11,10 +11,10 @@
             width: 150px;
             color: white;
             background-color: black;
-            right: 40%;
+            right: 49%;
             text-align: center;
             padding-top: 70px;
-            padding-bottom: 70px;
+            padding-bottom: 65px;
             margin-top: 25px;
             
         }
