--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             padding-top: 70px;
             padding-bottom: 65px;
             margin-top: 25px;
+            left: 50%;
             
         }
     </style>
