--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
             width: 150px;
             color: white;
             background-color: black;
-            right: 50%;
+            right: 49%;
             text-align: center;
             padding-top: 70px;
             padding-bottom: 65px;
             margin-top: 25px;
-            left: 50%;
+            top: 35%;
             
         }
     </style>
