--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             width: 150px;
             color: white;
             background-color: black;
-            right: 50%;
+            right: 200px;
             text-align: center;
             padding-top: 70px;
             padding-bottom: 65px;
