--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             text-align: center;
             padding-top: 70px;
             padding-bottom: 65px;
-            margin-top: 200px;
+            margin: auto;
             
             
         }
