--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             padding-top: 70px;
             padding-bottom: 65px;
             margin: auto;
+            display: block;
             
             
         }
