--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         #clockbox {
              margin: auto;
              width: 50%;
-             border: 3px solid green;
+             background-color: black;
              padding: 10px;
 
             
@@ -32,7 +32,7 @@
             setInterval(GetClock,1000);
         }
     </script>
-        <div id="clockbox" style="color: white;"></div>
+        <div id="clockbox" style="color: white; font-family:'Lucida Console', Monaco, monospace;"></div>
 </clock>
     
     <content>
