--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         
         #clockbox {
              margin: auto;
-             width: 50%;
+             width: 20%;
              background-color: black;
              padding: 10px;
 
@@ -32,7 +32,7 @@
             setInterval(GetClock,1000);
         }
     </script>
-        <div id="clockbox" style="color: white; font-family:'Lucida Console', Monaco, monospace;"></div>
+        <div id="clockbox" style="color: white; font-family:'Lucida Console', Monaco, monospace; text-align: center;"></div>
 </clock>
     
     <content>
