--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
              width: 10%;
              background-color: black;
              padding: 10px;
-             height: 10%;
+             padding-top: 100px;
+             padding-bottom: 100px;
 
             
             
