--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <title>H O M E</title>
     <style type="text/css">
+        body {
+            background-image: url("http://cdn.pcwallart.com/images/pastel-gradient-background-tumblr-wallpaper-4.jpg");
+        }
         
         #clockbox {
              margin: auto;
