--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <style type="text/css">
         body {
             background-image: url("http://cdn.pcwallart.com/images/pastel-gradient-background-tumblr-wallpaper-4.jpg");
+            background-repeat: no-repeat;
         }
         
         #clockbox {
