--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
              padding: 10px;
              padding-top: 70px;
              padding-bottom: 65px;
+             margin-top: 40%;
 
             
             
