--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
     </script>
         <div id="clockbox" style="color: white; font-family:'Lucida Console', Monaco, monospace; text-align: center;"></div>
 </clock>
-
+<leftb>
+    hey
+</leftb>
     
     <content>
     </content>
