--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
         }
         
         #clockbox {
-             margin: auto;
              width: 10%;
              background-color: black;
              padding: 10px;
@@ -22,7 +21,7 @@
         leftb {
             width: 10%;
             margin-left: 20%;
-            background color: white;
+            background-color: white;
             margin-top: 15%;
             position: absolute;
         }
@@ -30,6 +29,9 @@
     </style>
 </head>
 <body>
+<leftb>
+    hey
+</leftb>
 <clock>
     <script type="text/javascript">
         function GetClock(){
@@ -48,9 +50,7 @@
     </script>
         <div id="clockbox" style="color: white; font-family:'Lucida Console', Monaco, monospace; text-align: center;"></div>
 </clock>
-<leftb>
-    hey
-</leftb>
+
     
     <content>
     </content>
