--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     </style>
 </head>
 <body>
-<leftb style="leftbt">
-    hey
+<leftb>
+    <div id="leftbt">hey</div>
 </leftb>
 <clock>
     <script type="text/javascript">
