--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
              padding-top: 70px;
              padding-bottom: 65px;
              margin-top: 15%;
-            
+             left: 50%;
         }
 
         leftb {
@@ -24,6 +24,7 @@
             background-color: white;
             margin-top: 15%;
             position: absolute;
+            float: left;
         }
         
         #leftbt {
