--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
              padding-top: 70px;
              padding-bottom: 65px;
              margin-top: 15%;
-             left: 50%;
+             left: 200px;
         }
 
         leftb {
@@ -31,7 +31,7 @@
             color: black; 
             font-family:'Lucida Console', Monaco, monospace; 
             text-align: center;
-            font-size: 18px;
+            font-size: 16px;
         }
         
             
