--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
             background-color: white;
             margin-top: 15%;
             float: left;
+            padding-top: 70px;
+            padding-bottom: 65px;
         }
         
         #leftbt {
