--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
              padding-top: 70px;
              padding-bottom: 65px;
              margin-top: 15%;
-             left: 200px;
+             margin-left: 150px;
+             position: absolute;
         }
 
         leftb {
@@ -41,8 +42,7 @@
 <body>
 <leftb>
     <div id="leftbt">hey</div>
-</leftb>
-<clock>
+</leftb><clock>
     <script type="text/javascript">
         function GetClock(){
             var d=new Date();
