--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </head>
 <body>
 <leftb>
-    <div id="leftbt">hey</div>
+    <div id="leftbt">test</div>
 </leftb><clock>
     <script type="text/javascript">
         function GetClock(){
