--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
              width: 10%;
              background-color: black;
              padding: 10px;
-             padding-top: 70px;
-             padding-bottom: 65px;
+             padding-top: 60px;
+             padding-bottom: 55px;
              margin-top: 15%;
              margin-left: 150px;
              position: absolute;
@@ -22,11 +22,11 @@
         tumblrb {
             width: 10%;
             margin-left: 20%;
-            background-color: white;
+            background-color: black;
             margin-top: 15%;
             float: left;
-            padding-top: 70px;
-            padding-bottom: 65px;
+            padding-top: 60px;
+            padding-bottom: 55px;
         }
         
         #tumblrt {
