--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>H O M E</title>
+    <title>★ H O M E ★</title>
     <style type="text/css">
         body {
             background-image: url("http://cdn.pcwallart.com/images/gradient-tumblr-wallpaper-4.jpg");
@@ -42,7 +42,7 @@
 </head>
 <body>
 <tumblrb>
-    <div id="tumblrt"><a href="http://tumblr.com"><img src="http://www.iconsdb.com/icons/download/white/tumblr-3-512.png" style="width:55px;"></a></div>
+    <div id="tumblrt"><a href="http://caiohtee.tumblr.com">★</a><a href="http://tumblr.com"><img src="http://www.iconsdb.com/icons/download/white/tumblr-3-512.png" style="width:55px;"></a></div>
 </tumblrb><clock>
     <script type="text/javascript">
         function GetClock(){
