--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </head>
 <body>
 <tumblrb>
-    <div id="tumblrt"><a href="http://caiohtee.tumblr.com">★</a><a href="http://miserabiliah.tumblr.com">★</a><br><a href="http://tumblr.com"><img src="http://www.iconsdb.com/icons/download/white/tumblr-3-512.png" style="width:55px;"></a></div>
+    <div id="tumblrt"><a href="http://caiohtee.tumblr.com">★  </a><a href="http://miserabiliah.tumblr.com"> ★</a><br><br><a href="http://tumblr.com"><img src="http://www.iconsdb.com/icons/download/white/tumblr-3-512.png" style="width:55px;"></a></div>
 </tumblrb><clock>
     <script type="text/javascript">
         function GetClock(){
