--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             margin-top: 15%;
             float: left;
             padding-top: 15px;
-            padding-bottom: 28px;
+            padding-bottom: 26px;
         }
         
          #tumblrt {
@@ -84,7 +84,7 @@
 <body>
 <tumblrb>
     <div id="tumblrt"><a href="http://caiohtee.tumblr.com">★   </a><a href="http://miserabiliah.tumblr.com">★</a>  <br><br><a href="http://tumblr.com"><img src="http://www.iconsdb.com/icons/download/white/tumblr-3-512.png" style="width:55px;"></a></div>
-</tumblrb><ytb><div id="ytt"> testyt</div></ytb><clock>
+</tumblrb><ytb><div id="ytt"><a href="http://youtube.com"><img src="https://www.youtube.com/yt/brand/media/image/YouTube_light_color_icon.png"></a></div></ytb><clock>
     <script type="text/javascript">
         function GetClock(){
             var d=new Date();
