--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 <body>
 <tumblrb>
     <div id="tumblrt"><a href="http://caiohtee.tumblr.com">★   </a><a href="http://miserabiliah.tumblr.com">★</a>  <br><br><a href="http://tumblr.com"><img src="http://www.iconsdb.com/icons/download/white/tumblr-3-512.png" style="width:55px;"></a></div>
-</tumblrb><ytb><div id="ytt"><a href="http://youtube.com"><img src="https://www.youtube.com/yt/brand/media/image/YouTube_light_color_icon.png"></a></div></ytb><clock>
+</tumblrb><ytb><div id="ytt"><a href="http://youtube.com"><img src="https://www.youtube.com/yt/brand/media/image/YouTube_light_color_icon.png" style="width:55px"></a></div></ytb><clock>
     <script type="text/javascript">
         function GetClock(){
             var d=new Date();
