--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         }
     </script>
         <div id="clockbox" style="color: white; font-family:'Lucida Console', Monaco, monospace; text-align: center;"></div>
-</clock>
+</clock><sct><div id="scb"><a href="http://youtube.com"><img src="https://www.youtube.com/yt/brand/media/image/YouTube_light_color_icon.png" style="width:55px"></a></div></sct>
 
     
     <content>
