--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             float: left;
             padding-top: 50px;
             padding-bottom: 40px;
+            position: absolute;
         }
         
         #sct {
@@ -119,7 +120,7 @@
         }
     </script>
         <div id="clockbox" style="color: white; font-family:'Lucida Console', Monaco, monospace; text-align: center;"></div>
-</clock><sct><div id="scb"><a href="http://youtube.com"><img src="https://www.youtube.com/yt/brand/media/image/YouTube_light_color_icon.png" style="width:55px"></a></div></sct>
+</clock><scb><div id="sct"><a href="http://youtube.com"><img src="https://www.youtube.com/yt/brand/media/image/YouTube_light_color_icon.png" style="width:55px"></a></div></scb>
 
     
     <content>
