--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         
          scb {
             width: 10%;
-            margin-left: 200px;
+            margin-left: 240px;
             background-color: black;
             margin-top: 15%;
             float: left;
@@ -120,7 +120,7 @@
         }
     </script>
         <div id="clockbox" style="color: white; font-family:'Lucida Console', Monaco, monospace; text-align: center;"></div>
-</clock><scb><div id="sct"><a href="http://soundcloud.com"><img src="https://www.youtube.com/yt/brand/media/image/YouTube_light_color_icon.png" style="width:55px"></a></div></scb>
+</clock><scb><div id="sct"><a href="http://soundcloud.com"><img src="http://www.iconsdb.com/icons/preview/white/soundcloud-xxl.png" style="width:55px"></a></div></scb>
 
     
     <content>
