--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 <html>
 <head>
     <title>yap</title>
-  
-
+    <style>
+        textt {
+          color: black;
+          font-size: 20px;
+          margin-top: 50px;
+          }
+    </style>
     <body>   
+        <textt> heres yap</textt>
     </body>
 </html>
