--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
           color: black;
           font-size: 20px;
           margin-top: 50px;
+          margin-right: 100px;
+          font-family: Verdana;
           }
     </style>
     <body>   
