--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
           color: black;
           font-size: 20px;
           margin-top: 50px;
-          margin-right: 100px;
+          margin-left: 100px;
           font-family: Verdana;
           }
     </style>
