--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@ p {
 body {
  background-color: #6b6b6b
 }
+
+a {
+ color: darkgreen
+ font-weight: bold
+ text-decoration: none
+ text-transform: uppercase
+ }
+ 
 </style>
 
 </head>
@@ -66,6 +74,7 @@ YAPFUR
 <header>
 <h1 id=welcome> Welcome to Yapfur! </h1>
 <h2 id=subhead> the microblogging platform for furries </h2>
+ <a href=https://twitter.com/ketchupwastaken>Follow us on Twitter!!</a>
 </header>
 
 <body>
