--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+<a href=https://twitter.com/ketchupwastaken>Follow us on Twitter>
+
 <style>
 
 p {
@@ -74,7 +77,6 @@ YAPFUR
 <header>
 <h1 id=welcome> Welcome to Yapfur! </h1>
 <h2 id=subhead> the microblogging platform for furries </h2>
- <a href=https://twitter.com/ketchupwastaken>Follow us on Twitter!!</a>
 </header>
 
 <body>
