--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <html>
 <head>
 
-<a href=https://twitter.com/ketchupwastaken>Follow us on Twitter>
+<a href=https://twitter.com/ketchupwastaken id=frog>Follow us on Twitter>
 
 <style>
 
@@ -59,7 +59,7 @@ body {
  background-color: #6b6b6b
 }
 
-a {
+#frog {
  color: darkgreen
  font-weight: bold
  text-decoration: none
