--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-<a href=https://twitter.com/ketchupwastaken>Follow us on Twitter>
-
 <style>
 
 p {
@@ -60,10 +57,10 @@ body {
 }
 
 a {
- color: darkgreen
- font-weight: bold
- text-decoration: none
- text-transform: uppercase
+ color: darkgreen;
+ font-weight: bold;
+ text-decoration: none;
+ text-transform: uppercase;
  }
  
 </style>
@@ -77,6 +74,7 @@ YAPFUR
 <header>
 <h1 id=welcome> Welcome to Yapfur! </h1>
 <h2 id=subhead> the microblogging platform for furries </h2>
+ <a href=https://twitter.com/ketchupwastaken>Follow us on Twitter</a>
 </header>
 
 <body>
