--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ YAPFUR
 <header>
 <h1 id=welcome> Welcome to Yapfur! </h1>
 <h2 id=subhead> the microblogging platform for furries </h2>
- <a href=https://twitter.com/ketchupwastaken>Follow us on Twitter</a>
+<a href="DUMMY" class="button">Sign up!</a>
 </header>
 
 <body>
