--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ YAPFUR
 <header>
 <h1 id=welcome> Welcome to Yapfur! </h1>
 <h2 id=subhead> the microblogging platform for furries </h2>
-<a href="DUMMY" class="button">Sign up!</a>
+<a href="https://yaapp.github.io/dummy" class="button">Sign up!</a>
 </header>
 
 <body>
