--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+<!-- favicon -->
+ 
+ <link rel="icon" 
+      type="image/png" 
+      href="http://67.media.tumblr.com/tumblr_ltsfswn7kZ1r1b4vq.gif">
+ 
 <style>
-
+ 
 p {
  line-height: 0.6;
 }
