--- a/index.html
+++ b/index.html
@@ -15,6 +15,29 @@
  
 <style>
  
+ /* LARGE SHERBET EDIT */
+
+     /* mouse over link */
+        a:hover {
+             color: PaleGreen;
+             text-decoration: none;
+        }
+     /* selected link */
+        a:active {
+             color: white;
+             text-decoration: none;
+        }
+     /* highlight */
+       ::-moz-selection { 
+            color: #006600;
+            background: #e6ffe6;
+        }
+        ::selection {
+            color: #006600;
+            background: #e6ffe6;
+        }
+ /* END EDIT */
+ 
 p {
  line-height: 0.6;
 }
