--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
         }
      /* highlight */
        ::-moz-selection { 
-            color: #006600;
-            background: #e6ffe6;
+            color: #009900;
+            background: PaleGreen;
         }
         ::selection {
-            color: #006600;
-            background: #e6ffe6;
+            color: #009900;
+            background: PaleGreen;
         }
  /* END EDIT */
  
