--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
         }
      /* selected link */
         a:active {
-             color: white;
+             color: PaleGreen;
              text-decoration: none;
         }
      /* highlight */
        ::-moz-selection { 
-            color: #009900;
-            background: PaleGreen;
+            color: #32CD32;
+            background: white;
         }
         ::selection {
-            color: #009900;
-            background: PaleGreen;
+            color: #32CD32;
+            background: white;
         }
  /* END EDIT */
  
