--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         }
      /* highlight */
        ::-moz-selection { 
-            color: #32CD32;
+            color: darkgreen;
             background: white;
         }
         ::selection {
-            color: #32CD32;
+            color: darkgreen;
             background: white;
         }
  /* END EDIT */
